fix: navbar background visibility

--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,13 @@ nav.scrolled {
   height: 10vh;
 }
 
+nav.nHero{
+  background-color: rgba(52, 37, 9, 0.6);
+  backdrop-filter: blur(10px);
+  border: white 0.5px solid;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
 .nav-menu, .sidebar{
   display: none;
 }
@@ -190,7 +197,7 @@ nav.scrolled {
 }
 
 .hero h1{
-  font-size: clamp(1.5rem, 10vw, 6rem);
+  font-size: clamp(1.85rem, 10vw, 6rem);
   font-family: 'Beau Rivage', serif;
   margin-bottom: 0px;
   padding-bottom: none;
@@ -217,13 +224,18 @@ nav.scrolled {
   font-size: clamp(0.5rem, 0.75vw, 2rem);
 }
 
+@media (max-width: 900px){
+  .hero p{
+    margin-top: -0.5vh;
+  }
+}
+
 /* About Section */
 .about{
   height: auto;
   display: flex;
   padding: 7vh 4vw;
   align-items: center;
-  max-height: 800px;
 }
 
 .about-img{
@@ -237,7 +249,7 @@ nav.scrolled {
 }
 
 .about-content{
-  width: 50%;
+  width: 45%;
 }
 
 .about .heading{
@@ -269,7 +281,7 @@ nav.scrolled {
   font-size: clamp(0.8rem, 1.2vw, 1.4rem);
 }
 
-@media (max-width: 700px){
+@media (max-width: 900px){
   .about{
     flex-direction: column;
     width: auto;
@@ -279,16 +291,16 @@ nav.scrolled {
     width: 100%;
     display: flex;
     justify-content: center;
+    padding: 0px;
   }
 
   .about img{
-    max-height: 40vh;
-    width: auto;
+    width: 85%;
   }
 
   .about-content{
     margin-top: 3vh;
-    width: 100%;
+    width: 90%;
   }
 }
 
@@ -298,7 +310,7 @@ nav.scrolled {
   height: auto;
   display: flex;
   align-items: center;
-  margin-bottom: 4vw;
+  margin-bottom: 4vh;
   overflow: hidden;
   white-space: nowrap;
   padding: 1.5vh 0px;
@@ -327,7 +339,7 @@ nav.scrolled {
   align-items: center;
   margin: auto;
   margin-top: 5vh;
-  margin-bottom: 5vh;
+  margin-bottom: 0vh;
 }
 
 .popular-heading{
@@ -383,9 +395,12 @@ nav.scrolled {
 }
 
 @media (max-width: 600px){
+  .popular-dishes{
+    margin-bottom: 3vh;
+  }
+  
   .dishes{
     flex-direction: column;
-    gap: 0.5vh;
   }
 
   .dish{
@@ -396,6 +411,7 @@ nav.scrolled {
     border-radius: 10px;
     height: auto;
     padding: 0.5rem 0.5rem;
+    margin: 1vh 0vh;
   }
 
   .dish img{
